# emx-note

./: CLAUDE.md  CLI_REQUIREMENTS_LEAN.md  Cargo.toml  NOTE_PATH_RULES.md  REFACTOR_PLAN.md  TODO.md  USAGE.md
docs/: task-cli-design.md  task-format.md
src/: capsa.rs  cli.rs  constants.rs  edit.rs  engine.rs  lib.rs  main.rs  markdown.rs  note_resolver.rs  resolve.rs  util.rs
src/cmd/: capsa.rs  copy.rs  create.rs  daily.rs  default.rs  delete.rs  frontmatter.rs  gc.rs  link.rs  list.rs  meta.rs  mod.rs  move.rs  note.rs  note_resolve.rs  open.rs  print.rs  print_default.rs  resolve.rs  search.rs  search_content.rs  set_default.rs  tag.rs  task.rs
src/cmd/task/: add.rs  comment.rs  find.rs  list.rs  log.rs  mod.rs  reader.rs  release.rs  show.rs  take.rs
src/commands/: mod.rs  note.rs
src/commands/capsa/: cmd.rs  create.rs  delete.rs  info.rs  list.rs  mod.rs
tests/: capsa_basic.txtar  daily_basic.txtar  e2e.rs  gc_basic.txtar  note_commands.txtar  note_resolve.txtar  note_resolve_advanced.txtar  tag_basic.txtar  task_add.txtar  task_agent_coordination.txtar  task_comment.txtar  task_list.txtar  task_release.txtar  task_show_log_find.txtar  task_take.txtar
