[package]
name = "emx-note"
version = "0.1.0"
edition = "2021"
description = "A Zettelkasten-style note management tool"
repository = "https://github.com/coreseekdev/emx-note"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "6"
dunce = "1"
once_cell = "1"
pulldown-cmark = "0.13"
regex = "1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"

[dev-dependencies]
emx-testspec = { path = "../emx-testspec" }

[lib]
name = "emx_note"
path = "src/lib.rs"

[[bin]]
name = "emx-note"
path = "src/main.rs"
